# qt_programs

./: .gitignore
IntelTBB/: github.txt
IntelTBB/cadex files/: Curves3DWrapper.cpp  Curves3DWrapper.h  Измерение времен вычисления.txt  Параллельная сумма в TBB.txt  Скалярное умножение векторов в TBB.txt
MT_Josuttis/18_MT_Josuttis/: 18_MT_Josuttis.pro
ORS/progtest/: progtest.cpp  progtest.vcxproj  schedule.txt
Sedgewick/Sedgewick/: Sedgewick.pro
architect/: Архитектура Произв конф.vsdx  Архитектура Произв конф_объекты.vsdx  Архитектура произв DLMS-конф.docx  Правила проектирования.docx
azimut/azimut/: Compass.cpp  Compass.h  Point.cpp  Point.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  azimut.pro  main.cpp
boost/: 3d vector.txt  boost и cmake.txt  сборка boost.txt
boost/boost CMakeLists/: CMakeLists.txt
certification_tests/retratech/: NullptrObject.h  general.h  main.cpp  retratech.pro  stl.h
cppLibrary/cppLibrary/: cppLibrary.pro
draft/draft/: abstract_class.h  adl.h  align.h  arrays.h  auto.h  bit_flags.cpp  bit_flags.h  break.h  cast.h  class_initialization.cpp  class_initialization.h  cond_variables.h  const_char.h  construction_seq.h  constructor.h  constructors.h  constructors_gen.h  copy_algs.h  cpp_memory.cpp  cpp_memory.h  cycles.h  delete_this.h  directives.h  draft.pro  extern.h  file1.cpp  file1.h  file2.cpp  foo.h  (+54 more)
folder/: document.txt
ict/: Т(Уразов А.).docx
learn С++/: План обучения С++.docx
solaris/: Maintenance_Solaris.docx  ТО Solaris.docx  жалоба на постановление.docx  статьи кодексов.docx
yandex/: tasks.docx
(+966 files in other folders)
